# ITKAnisotropicDiffusionLBR

./: CMakeLists.txt  CoherenceEnhancingDiffusion.cxx  CoherenceEnhancingDiffusion.html  CoherenceEnhancingDiffusion2DCommandLine.h  ConvertAndResample.cxx  ITKKWStyleOverwrite.txt  README.md  README.rst  circle.yml  index.html  itk-module.cmake  main.js  package.json  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: apply-clang-format.yml  build-test-package.yml  clang-format-linter.yml
Old/: CMakeLists.txt  LinearAnisotropicDiffusionTest.cxx
examples/: CMakeLists.txt  CoherenceEnhancingDiffusion.cxx
include/: CoherenceEnhancingDiffusionCommandLine.h
js/: EmscriptenDebug.js  FilterWorker.js  Runner.js  pre.js
test/: azure-pipelines.yml
test/Baseline/: mrbrain_cEED.vtk.cid
test/Docker/: Dockerfile  build.sh  run.sh  test.sh
test/Input/: mrbrain_noisy.vtk.cid
